# gmo-btc-dca

./: .gitignore  LICENSE  README.md  main.py
.github/workflows/: bitcoin_dca.yml  main.yml
aws-lambda/: Makefile  README.md  btc_auto_purchase.py  env.json.example  template.yaml  test_local.py
aws-lambda/auto-purchase/: btc_auto_purchase.py  env.json  test_local.py
aws-lambda/settings-api/: DEPLOY.md  deploy.sh  lambda_function.py
frontend/: README.md  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.js  index.js
github-actions/: README.md  btc_purchase.py
instance/: trade_config.db
learn-bitcoinj/: README.md  build.gradle  settings.gradle
learn-bitcoinj/src/main/java/com/example/bitcoinj/: Lesson1.java  Lesson2.java  Lesson3.java
pi/: README.md  pyproject.toml
pi/api/: constants.py  db.py  formatters.py  gmo.py  main.py  schema.sql  settings.py
pi/caddy/: Caddyfile
pi/purchase/: run_purchase.py
pi/scripts/: discord.py  import_dynamo.py  init_db.py
pi/systemd/: btc-dca-api.service  btc-dca-backup.service  btc-dca-backup.timer  btc-dca-purchase.service  btc-dca-purchase.timer
pi/tests/: conftest.py  test_api.py  test_import_dynamo.py  test_run_purchase.py  test_settings.py
