[project]
name = "btc-dca-pi"
version = "0.1.0"
description = "Self-hosted BTC DCA runner for Raspberry Pi"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
